--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "cors": "^2.8.5",
+    "express": "^4.17.1",
+    "helmet": "^3.21.2",
     "history": "^4.10.1",
     "query-string": "^6.9.0",
     "react": "^16.12.0",
@@ -19,7 +22,9 @@
     "route-parser": "0.0.5"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "node server/index.js",
+    "server:local": "PORT=3030 nodemon server/index.js",
+    "dev": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
